--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/sea_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:contentDescription="null"
+        android:scaleType="fitStart"
+        android:src="@drawable/sea_coast_water" />
 
+    <include layout="@layout/calculator" />
 
 </FrameLayout>
