--- a/app/src/main/res/layout/calculator.xml
+++ b/app/src/main/res/layout/calculator.xml
@@ -115,6 +115,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_columnSpan="2"
-        android:layout_gravity="fill_horizontal" />
+        android:layout_gravity="fill_horizontal"
+        android:textSize="10sp"/>
 
 </GridLayout>
