--- a/app/src/main/res/layout/calculator.xml
+++ b/app/src/main/res/layout/calculator.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="fill_horizontal" />
 
     <Button
-        android:id="@+id/del"
+        android:id="@+id/key_del"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_del" />
