--- a/app/src/main/res/layout/calculator.xml
+++ b/app/src/main/res/layout/calculator.xml
@@ -12,103 +12,103 @@
         android:layout_columnSpan="3"
         android:layout_gravity="fill_horizontal" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_del"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_del" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_1" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_2" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_3" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_plus" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_4" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_5" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_6" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_minus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_minus" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_7" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_8" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_9" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_multiply"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_multiply" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_0"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_0" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_dot"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_dot" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_result"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/key_result" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/key_divide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
